# contextseek

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/en/: README.md  troubleshooting.md
docs/en/concepts/: context-model.md  retrieval-model.md  scope-and-stage.md
docs/en/getting-started/: configuration.md  installation.md  quickstart.md
docs/en/guides/: core-concepts.md  evolution.md  observability.md  provenance-and-audit.md  storage.md  write-and-retrieve.md
docs/en/reference/: api.md  examples.md  settings.md
docs/zh/: README.md  troubleshooting.md
docs/zh/concepts/: context-model.md  retrieval-model.md  scope-and-stage.md
docs/zh/getting-started/: configuration.md  installation.md  quickstart.md
docs/zh/guides/: core-concepts.md  evolution.md  observability.md  provenance-and-audit.md  storage.md  write-and-retrieve.md
docs/zh/reference/: api.md  examples.md  settings.md
eval/: Makefile  __init__.py
eval/appworld/: README.md  __init__.py  agent.py  appworld_worker.py  context.py  design.md  environment.py  llm.py  prompts.py  run.py
eval/appworld/adapters/: __init__.py  base.py  baseline.py  official_simplified.py  seekcontext_react.py
eval/appworld/config/: baseline.yaml  default.yaml  seekcontext_evolve.yaml  (+4 more)
eval/taubench/: README.md  __init__.py  context.py  design.md  prompts.py  run.py  tau2_compat.py
examples/: README.md  full_pipeline_file.py  full_pipeline_ob.py  langchain_pipeline.py  llm_full_pipeline_oceanbase.py  powermem_minimal.py  powermem_plug_demo.py  research_agent_demo.py
src/seekcontext/: __init__.py  _version.py  errors.py  scope.py
tests/: conftest.py
tests/integration_tests/: test_full_pipeline_file_example.py  test_seekcontext_m1_m3_flow.py
tests/unit_tests/: test_audit.py  test_config.py  test_context_injection.py  test_dreaming.py  test_evolution.py  test_http_server.py  test_langchain_middleware.py  test_powermem_plug.py  test_retrieval.py  test_routing.py  test_scope.py  test_security.py  test_seekcontext_delete.py  test_settings.py
(+119 files in other folders)
